--- a/src/style/themes/dark.scss
+++ b/src/style/themes/dark.scss
@@ -9,7 +9,7 @@
   --color-bg-lighter: #232933;
   --color-bg-mdcode: #ffffff14;
   --color-bg-details: #1b2028ed;
-  --color-bg-info: #E5EEFF;
+  --color-bg-info: #262c36;
   /* Text */
   --color-text-primary: #fff;
   --color-text-secondary: #d2d3d5;
